--- a/gestao/templates/admin_custom/base_admin.html
+++ b/gestao/templates/admin_custom/base_admin.html
@@ -99,5 +99,6 @@
     {% block extra_body %}{% endblock %}
     <script src="{% static 'gestao/js/admin_layout.js' %}" defer></script>
     <script src="{% static 'gestao/js/forms.js' %}" defer></script>
+    <script src="{% static 'gestao/js/sidebar.js' %}" defer></script>
 </body>
 </html>
