--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -3,13 +3,15 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login</title>
-    <link rel="stylesheet" href="{% static 'painel_cliente/painel.css' %}">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+  <meta name="description" content="Login - NCFly Sistema de Gestão de Voos e Programas de Fidelidade" />
+  <title>Login - NCFly</title>
+  <link rel="stylesheet" href="{% static 'gestao/css/login.css' %}">
 </head>
 <body class="login-page">
-   <div class="login-container">
-      <h2>Bem-vindo ao NCfly</h2>
+  <div class="login-container">
+    <img src="{% static 'painel_cliente/ncfly_logo.png' %}" alt="Logo NCfly" class="login-logo">
+    <h2>Bem-vindo ao NCfly</h2>
     {% if messages %}
     <div class="erro">
       {% for message in messages %}
@@ -32,6 +34,6 @@
       </select>
       <button type="submit">Entrar</button>
     </form>
-    </div>
-  </body>
+  </div>
+</body>
 </html>
