--- a/painel_cliente/templates/painel_cliente/hoteis.html
+++ b/painel_cliente/templates/painel_cliente/hoteis.html
@@ -27,10 +27,9 @@
                 </tr>
                 {% empty %}
                 <tr>
-                    <td colspan="6" style="text-align:center;">Nenhuma emissão encontrada.</td>
+                    <td colspan="6" class="table-empty">Nenhuma emissão encontrada.</td>
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
 {% endblock %}
-
