--- a/painel_cliente/templates/painel_cliente/inativo.html
+++ b/painel_cliente/templates/painel_cliente/inativo.html
@@ -3,9 +3,8 @@
 {% block title %}Acesso Bloqueado{% endblock %}
 
 {% block content %}
-    <div style="text-align:center;">
+    <div class="status-message">
         <h1>Conta Inativa</h1>
         <p>Seu acesso foi bloqueado. Entre em contato com o administrador.</p>
     </div>
 {% endblock %}
-
