--- a/painel_cliente/templates/painel_cliente/emissoes.html
+++ b/painel_cliente/templates/painel_cliente/emissoes.html
@@ -44,7 +44,7 @@
                 </tr>
                 {% empty %}
                 <tr>
-                    <td colspan="14" style="text-align:center;">Nenhuma emissão encontrada.</td>
+                    <td colspan="14" class="table-empty">Nenhuma emissão encontrada.</td>
                 </tr>
                 {% endfor %}
             </tbody>
