--- a/painel_cliente/templates/painel_cliente/movimentacoes.html
+++ b/painel_cliente/templates/painel_cliente/movimentacoes.html
@@ -26,10 +26,9 @@
                 </tr>
                 {% empty %}
                 <tr>
-                    <td colspan="4" style="text-align:center;">Nenhuma movimentação encontrada.</td>
+                    <td colspan="4" class="table-empty">Nenhuma movimentação encontrada.</td>
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
 {% endblock %}
-
